# hogger

./: .pre-commit-config.yaml  README.md  __main__.py  docker-compose.yml  docker.sh  leeroy.yml  main.py  pyproject.toml
.github/: pull_request_template.md
docs/: README.md
hogger/: __init__.py  apply.py  manifest.py
hogger/cli/: __init__.py  apply.py  init.py  main.py
hogger/engine/: __init__.py  manifest.py  sql.py  state.py  util.py  world_database.py  world_table.py
hogger/entities/: __init__.py  entity.py  entity_codes.py  world_table.py
hogger/entities/item/: __init__.py  item.py  item_damage.py  item_enums.py  item_flags.py  item_randomstat.py  item_requires.py  item_sockets.py  item_spells.py  item_text.py  utils.py  weapon.py
hogger/entities/items/: __init__.py  item.py  item_damage.py  item_enums.py  item_flags.py  item_sockets.py  (+5 more)
hogger/misc/: __init__.py  errors.py  misc.py  utils.py
hogger/runtime/: runtime.py
hogger/sql/: __init__.py  sql_state.py  world_table.py
hogger/types/: __init__.py  duration.py  enum.py  enummap.py  intflag.py  lookup.py  money.py
hogger/util/: __init__.py  duration.py  enum.py  enummap.py  intflag.py  misc.py  money.py  utils.py
infra/: bent_staff.hogger  main.hogger
src/: apply.py  main.py  manifest.py
src/items/: __init__.py  enums.py  item.py  item_bitmasks.py  item_damage.py  item_enums.py  item_extras.py  item_flags.py  item_properties.py  item_queries.py  item_randomstat.py  item_sockets.py  item_spells.py  weapon.py
src/misc/: __init__.py  currency.py  errors.py  intflags.py  misc.py  money.py  utils.py
tests/: conftest.py
tests/engine/: test_world_table.py
tests/integration/: conftest.py  test_thingy.py
tests/types/: test_duration.py
(+4 files in other folders)
